# IntelliFIM

./: .env.docker.example  .gitignore  CLI.py  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
IntelliFIM/: .env.example  db_backup.json  manage.py  requirements.txt  reset_migrations.sh
IntelliFIM/Example/dummy_folder_1/: test.txt  text2.txt
IntelliFIM/IntelliFIM/: asgi.py  celery.py  db_routers.py  settings.py  settings_utils.py  urls.py  wsgi.py
IntelliFIM/NTA/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
IntelliFIM/NTA/core/: network_monitor.py
IntelliFIM/NTA/migrations/: 0001_initial.py
IntelliFIM/accounts/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
IntelliFIM/accounts/migrations/: 0001_initial.py  0002_user_role.py
IntelliFIM/apps/authentication/: models.py  serializers.py  urls.py  views.py
IntelliFIM/apps/common/: db_routers.py
IntelliFIM/apps/fim/: apps.py  models.py  serializers.py  views.py
IntelliFIM/fim/: admin.py  apps.py  consumers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
IntelliFIM/fim/core/: FIM.py  django_adapters.py  fim_shared.py  fim_utils.py
IntelliFIM/fim/migrations/: 0001_initial.py
IntelliFIM/fim/utils/: backup.py  django_logger.py  logging_filters.py  realtime.py  thread_pool.py  timestamp.py
IntelliFIM/src/Authentication/: Authentication.py
IntelliFIM/src/FIM/: FIM.py  fim_utils.py
IntelliFIM/src/api/: main.py
IntelliFIM/src/config/: logging_config.py
IntelliFIM/src/utils/: anomaly_detection.py  (+4 more)
chronos-ai-guard/: .dockerignore  .env.development  Dockerfile  package-lock.json  package.json
data-plane/: .env.dataplane.example  README.md  docker-compose.yml
data-plane/alertmanager/: alertmanager.yml
data-plane/anomaly/: Dockerfile  README.md  pyproject.toml
data-plane/anomaly/scripts/: capture-baseline.py
data-plane/anomaly/src/anomaly/: __main__.py  config.py  engine.py  features.py  metrics.py  train.py
data-plane/anomaly/tests/: conftest.py  test_config.py  test_engine.py  test_features.py  test_metrics.py  test_train.py
data-plane/anomaly/training-data/: baseline-events.jsonl
data-plane/auth_backend/: Dockerfile  README.md  pyproject.toml
data-plane/auth_backend/src/auth_backend/: __main__.py  api.py  config.py  jwt_helper.py  metrics.py  store.py
data-plane/auth_backend/tests/: conftest.py  test_api.py  test_config.py  test_jwt.py  test_metrics.py  test_users_store.py
data-plane/correlator/: .dockerignore  Dockerfile  README.md  pyproject.toml
data-plane/filebeat/: filebeat-wazuh.yml  filebeat-zeek.yml
data-plane/normalizers/: Dockerfile  README.md  pyproject.toml
data-plane/normalizers/src/normalizers/: __main__.py  _helpers.py  base.py  config.py  wazuh_auth.py  wazuh_fim.py  zeek_conn.py  zeek_dns.py  zeek_files.py  zeek_http.py
data-plane/normalizers/tests/: conftest.py  test_base.py  test_config.py  test_helpers.py  test_wazuh_auth.py  test_wazuh_fim.py  test_zeek_conn.py  test_zeek_dns.py  test_zeek_files.py  test_zeek_http.py
data-plane/normalizers/tests/fixtures/: wazuh_auth_login_failed.json  wazuh_auth_login_success.json  wazuh_auth_sudo.json  wazuh_fim_create.json  wazuh_fim_delete.json  wazuh_fim_modify.json  zeek_conn.json  zeek_dns.json  zeek_files.json  zeek_http.json
data-plane/orchestrator/: .dockerignore  Dockerfile  README.md  pyproject.toml
data-plane/orchestrator/src/orchestrator/: __main__.py  api.py  auth.py  config.py  engine.py  metrics.py  store.py  tier.py  wazuh_client.py
data-plane/orchestrator/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_engine.py  test_metrics.py  test_quarantine_sh.py  test_store.py  test_wazuh_client.py
data-plane/orchestrator/wazuh-ar/: intellifim-orchestrator.conf  quarantine.sh  wazuh-manager.Dockerfile
data-plane/pcaps/: README.md  http_get_basic.pcap
data-plane/policy/: .dockerignore  Dockerfile  README.md  pyproject.toml
data-plane/policy/policies/: threat_score.rego  threat_score_test.rego
data-plane/policy/src/policy/: __main__.py  config.py  engine.py  metrics.py  opa_client.py  redis_store.py
data-plane/policy/tests/: conftest.py  test_config.py  test_engine.py  test_metrics.py  test_opa_client.py  test_redis_store.py
data-plane/postgres/: init.sh
data-plane/prometheus/: alerts.yml  prometheus.yml
data-plane/reporting/: Dockerfile  README.md  pyproject.toml
data-plane/reporting/src/reporting/: __main__.py  api.py  auth.py  config.py  consumer.py  metrics.py  models.py  orchestrator_client.py  renderer.py  store.py
data-plane/reporting/src/reporting/templates/: security_summary.html.j2
data-plane/reporting/tests/: conftest.py  test_api.py  test_config.py  test_consumer.py  test_metrics.py  test_orchestrator_client.py  test_renderer.py  test_store.py
data-plane/schemas/: README.md  pyproject.toml
data-plane/schemas/src/intellifim_schemas/: __init__.py  correlation.py  event.py  policy.py  scoring.py
data-plane/schemas/tests/: test_correlation.py  test_event.py  test_policy.py  test_scored.py
data-plane/scripts/: approve-pending.py  check-observability.sh  check-postgres.sh  create-topics.sh  generate-report.py  init-secrets.sh  replay-pcap.sh  run-all-scenarios.sh  run-scenario.sh  seed-test-traffic.sh  tail-correlated.py  tail-normalized.py  tail-scored.py  tail-scores.py
data-plane/simulator/: Dockerfile  README.md  pyproject.toml
data-plane/simulator/src/simulator/: __main__.py  kafka_tail.py  runner.py
data-plane/simulator/src/simulator/scenarios/: __init__.py  data_exfil.py  dns_tunnel.py  port_scan.py  ransomware_rapid.py  webshell_drop.py
data-plane/simulator/tests/: conftest.py  test_kafka_tail.py  test_runner.py  test_scenarios.py
data-plane/zeek/: local.zeek
docker/: backend-entrypoint.sh
docker/postgres/: init.sql
requirements/: base.txt  dev.txt  prod.txt
src/FIM/: FIM.py  fim_shared.py
src/NTA/: network_monitoring.py  simple_network_monitoring.py
src/api/: main.py
src/utils/: backup.py  database.py  database_manager.py
(+72 files in other folders)
