[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellifim-anomaly"
version = "0.1.0"
description = "Per-event anomaly detection service for IntelliFIM"
requires-python = ">=3.12"
dependencies = [
    "intellifim-schemas>=0.3,<1.0",
    "aiokafka>=0.10,<0.12",
    "pydantic>=2.7,<3",
    "scikit-learn>=1.4,<2",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
]

[project.scripts]
intellifim-anomaly-detector = "anomaly.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
