[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellifim-policy"
version = "0.1.0"
description = "Policy + dynamic threat scoring service for IntelliFIM"
requires-python = ">=3.12"
dependencies = [
    "intellifim-schemas>=0.4,<1.0",
    "aiokafka>=0.10,<0.12",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<0.29",
    "redis>=5.0,<6",
    "prometheus-client>=0.20,<0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "fakeredis>=2.20,<3",
    "respx>=0.21,<0.23",
]

[project.scripts]
intellifim-policy-engine = "policy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
