[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellifim-reporting"
version = "0.1.0"
description = "IntelliFIM reporting service — PDF Security Summary reports from threat scores + approvals."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "pydantic[email]>=2.7,<3",
    "aiokafka>=0.10,<0.13",
    "asyncpg>=0.29,<0.31",
    "httpx>=0.27,<0.29",
    "python-jose[cryptography]>=3.3,<4",
    "weasyprint>=62,<63",
    "pydyf>=0.10,<0.11",   # weasyprint 62.x relies on a `transform` method removed in pydyf 0.11+

    "jinja2>=3.1,<4",
    "matplotlib>=3.8,<4",
    "intellifim-schemas>=0.4,<1.0",
    "prometheus-client>=0.20,<0.22",
    "prometheus-fastapi-instrumentator>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "respx>=0.21,<0.23",
    "httpx>=0.27,<0.29",
    "testcontainers[postgres]>=4.0,<5",
]

[project.scripts]
intellifim-reporting = "reporting.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reporting = ["templates/*.html.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
