[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellifim-schemas"
version = "0.1.0"
description = "Canonical event schema shared across all IntelliFIM sub-projects"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]
